# ProjectSwiper

./: .gitignore  ECGconf.json  Improvement Notes.txt  RandomPartitionTest.py  RunAndTime.py  debugEval.py  plotPaperFigure.py  run_tar.sh  testEval.py  testRun.py
ECGPloter/: ResultPloter.py
ECGPostProcessing/: GroupResult.py  GroupResult_Score.py
EvaluationSchemes/: Eval_MITdb_R.py  EvaluateQTdb.py  EvaluateQTdb_Round.py  EvaluationMultiLeads.py  Group2LeadsResults.py  MedEvaluationClass.py  PlotMITdbResult.py  PlotResult.py  ResultGrouper.py  averaging_intrarecord_std.py  csvwriter.py  loadResult.py  regression_evaluation.py
EvaluationSchemes/MIT_FNFP/: 100.pkl  101.pkl  102.pkl  103.pkl  104.pkl  105.pkl  106.pkl  107.pkl  108.pkl  109.pkl  111.pkl  112.pkl  113.pkl  114.pkl  115.pkl  116.pkl  117.pkl  118.pkl  119.pkl  121.pkl  122.pkl  123.pkl  124.pkl  200.pkl  201.pkl  202.pkl  203.pkl  205.pkl  207.pkl  208.pkl  209.pkl  210.pkl  212.pkl  213.pkl  214.pkl  215.pkl  217.pkl  219.pkl  220.pkl  221.pkl  (+8 more)
EvaluationSchemes/PaperResultEvaluation/: Evaluates_sel30_Round.py  Evaluatesel30_test.py  sel30_ECGPloter.py
EvaluationSchemes/result-converters/: list-result-converter.py  original-converter.py
EvaluationSchemes/templates/: record-template.html  result-table.css  result-table.html
Ideas/Normalization/: .gitignore  ECGconf.json  testEval.py  testQT.py  testRun.py  说明.txt
MITdb/: MITdbLoader.py  plotdata.py
MITdb/pydata/: 100_marklabel  100_markpos  101_marklabel  101_markpos  102_marklabel  102_markpos  103_marklabel  103_markpos  104_marklabel  104_markpos  105_marklabel  105_markpos  106_marklabel  106_markpos  107_marklabel  107_markpos  108_marklabel  108_markpos  109_marklabel  109_markpos  111_marklabel  111_markpos  112_marklabel  112_markpos  113_marklabel  113_markpos  114_marklabel  114_markpos  115_marklabel  115_markpos  116_marklabel  116_markpos  117_marklabel  117_markpos  118_marklabel  118_markpos  119_marklabel  119_markpos  121_marklabel  121_markpos  (+57 more)
MatlabPloter/: Matlab_PlotResult.m  Matlab_PlotTrainingSamples.m  Result2Mat_Format.py
PaperResults/DetectionResult/: plot_Detection_Result.py
PaperResults/ECG_DWT/: plotECG_DWT.py  plot_RSWT_sele0704.py
PaperResults/FeatureVisualization/: rand_relations.json  train_a_model.py  visualize_RSWT.py
PaperResults/MITdb_R_Evaluation/: FN_pic.m
PaperResults/Matlab_MIT_Marker/: MIT_ResultPloter.m
PaperResults/QT_TestResult/: EvaluateQTdb.py  GetFastTestRegions.py  QTplot_Detection_Result.py
PaperResults/QTdb_sample_image/: show_QT.py
PaperResults/TrainedModelAnalysis/: find_decision_tree_info.py
PaperResults/TrainingSampleAnalysis/: Matlab_TrainingSample_Analysis_script.m
PaperResults/VisualiseFeatureImportance-v2/: ECG_RandomForest_trainer.py  train-a-model.py  visualize_RSWT.py
PaperResults/VisualiseFeatureImportance-v3/: ECGconf.json  feature_prettify.py  visualize_importance_swt.py
PaperResults/WaveletSelection/: plotDWT.py
PaperResults/plotQT2LeadResult/: EvaluateQTdb_MultiLeadR1.py  Evaluation2Leads.py  Group2LeadsResults.py  PlotTool_CheckBadRecord.py  SWT_Group2LeadResults.py  SWT_Group_debug.py  SWT_NoPredictQRS.py  averaging_intrarecord_std.py  classNonQRS_SWT.py  debug_which_round_record_is_bad.py  plot2LeadResults.py  plot2Lead_subplot.py  plotEvaluate2LeadResult.py  plot_SWT_2Lead_subplot.py  prove-effectiveness-of-SWT-filtering.py  run_Group_Eval.py  run_Group_Eval_Record_debug.py  run_Group_Eval_total.py  (+5 more)
QTdata/: disp_QTwave.py  invalid_records.json  loadQTdata.py  recordSelection.py
RFclassifier/: ClassificationLearner.py  ClassificationLearner_API.py  ECGRF.py  ParallelRfClassifier.py  RegressionLearner.py  evaluation.py  pickNegtiveSample.py
TestSchemes/: ClassificationLearnerAPI_test.py  QT_RoundTest.py  Regression_Test.py  TestOnAllQTdata.py  TestOnAllQTdata_TrainonSelectedRecords.py  TestOnsel30.py  TestonMITdb.py
WTdenoise/: wtfeature.py
WhiteSampleTool/: whiteSamplePicker.py
cpp-api/: Readme.md  rf-caller.cc  rf-caller.h
doc/: framework.html  framework.md
hog1d/: HogClass.py  HogFeatureExtractor.py  readme.md
other_tasks/wt_cpp_api/: CMakeLists.txt  DTCWT.cc  DTCWT.h  DTCWT_TEST.cc  KPD.cc  KPD.h  KPD_test.cc  QRS_detection.h  Qshift.cc  Qshift.h  Readme.md  T_detection.cc  T_detection.h  abs.h  call_simple_function_terminate.cc  ch_name.py  debug_plot.py  eml_rand_mcg16807_stateful.cc  eml_rand_mcg16807_stateful.h  eml_rand_mt19937ar_stateful.cc  eml_rand_mt19937ar_stateful.h  eml_sort.cc  eml_sort.h  gaussian_function.cc  gaussian_function.h  rtGetNaN.h  rt_nonfinite.h  rtwtypes.h  simple_function.cc  sum.h  test.cc  wavelet-test.cc  wavelet2d.cc  wavelet_api.py  wavelet_udfs.cc  wavelet_udfs.h  wt_detect.cc  wt_detect.h
other_tasks/wt_cpp_api/TEST/wt_detect_test/: KPD_test.m  compare.py  plot_test_cpp_results.py  test_cpp.py
other_tasks/wt_cpp_api/call_simple_function/: CMakeLists.txt  QRS_detection.cc  QRS_detection.h  T_detection.cc  T_detection.h  abs.cc  abs.h  call_simple_function.cc  call_simple_function.h  call_simple_function_emxAPI.cc  call_simple_function_emxAPI.h  call_simple_function_emxutil.cc  call_simple_function_emxutil.h  call_simple_function_initialize.cc  call_simple_function_initialize.h  call_simple_function_terminate.cc  call_simple_function_terminate.h  call_simple_function_types.h  eml_sort.cc  eml_sort.h  floor.cc  floor.h  gaussian_function.cc  gaussian_function.h  mean.cc  mean.h  power.cc  power.h  rdivide.cc  rdivide.h  rtGetInf.cc  rtGetInf.h  rtGetNaN.cc  rtGetNaN.h  rt_nonfinite.cc  rt_nonfinite.h  rtwtypes.h  sum.cc  sum.h
other_tasks/wt_cpp_api/wavelib/src/shared/: .wavedec_api.cc.swp  wavedec_api.cc  wavedec_api.h  wavelet2d.h
other_tasks/wt_cpp_api/wavelib/src/test/: Makefile  cmake_install.cmake  wavelet1d_test.cc  wt1d
paper-script-swt/: regression_visualization.py  train_swt_models.py  visualize_importance_swt.py  visualize_importance_window_normed.py
tools/: function_visualizer.py  gaussian_test.py  test.py
viewer/: regression-result-viewer.py  view-raw-prediction-output.py
(+391 files in other folders)
